--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
    }
 p{
-    color:rgb(0, 0, 0);
+    color:burlywood !important;
     font-style: oblique;
     font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
@@ -62,6 +62,7 @@ nav li :hover{
  }
  p{
          text-align: center;
+         color: orange;
  }
  .card{
    background-color:mediumturquoise !important;
@@ -131,22 +132,18 @@ nav li :hover{
     padding: 0 auto;
     border: 5px solid red;
     text-align: center;
-    
-    
-   }
+  }
+
   /*---------media query------------*/
   @media screen and (max-width:500px) {    
     
  
        header {flex-direction: column;
-        align-items: start;
-        justify-content: start;
+        align-items: end;
+        justify-content: end;
         height: 100px;  
         }
  
-   h1{
-    font-size: 25px;
-   }
    .div_2{
     display: flex;
     text-align: center;
